# searchengine

./: .gitignore  Makefile  README.md  project.md
backend/: .env.example  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 10ed4bd6a2ea_add_users.py  15f963db297b_add_opc_organization_project_artifact_.py  c147f1c6d406_initial.py  d3469bd9a9c1_add_usage_records.py  db238a80e0a7_add_evidence_feedback.py  e965ef09b75e_add_workflow_mvp_plan.py  f80228aefd72_add_workflows_and_fk_workflow_id.py
backend/app/: __init__.py  config.py  main.py
backend/app/agent/: context.py  llm.py  orchestrator.py  project_orchestrator.py  prompts.py  run.py  state.py
backend/app/api/v1/: auth.py  (+4 more)
backend/app/core/: __init__.py  logging.py  security.py
backend/app/db/: __init__.py  base.py  session.py
backend/app/models/: __init__.py  agent_run.py  artifact.py  audit_log.py  evidence.py  evidence_feedback.py  organization.py  project.py  subscription.py  tool_call.py  usage_record.py  user.py  workflow.py
backend/app/search/: bing_scraper.py  fetcher.py  scorer.py
backend/app/services/: storage.py  workflow_converter.py
backend/app/usage/: __init__.py  service.py
backend/app/worker/: celery_app.py  opc_tasks.py  tasks.py
backend/scripts/: e2e_smoke.py
backend/tests/: conftest.py
backend/tests/agent/: test_orchestrator.py  test_project_orchestrator.py
backend/tests/api/: test_auth.py  test_projects.py  test_usage.py  test_workflows.py
backend/tests/golden_set/: evidence_scores.jsonl
backend/tests/search/: test_golden_set.py
(+74 files in other folders)
