[project]
name = "workflow-discovery-agent"
version = "0.1.0"
description = "Workflow Discovery Agent - enterprise SaaS for real multi-agent workflow analysis"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy>=2.0.35",
    "alembic>=1.13",
    "asyncpg>=0.29",
    "redis>=5.1",
    "celery>=5.4",
    "anthropic>=0.40",
    "playwright>=1.48",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "python-jose[cryptography]>=3.3",
    "argon2-cffi>=23.1",
    "httpx>=0.27",
    "structlog>=24.4",
    "python-multipart>=0.0.12",
    "tenacity>=9.0",
    "psycopg[binary]>=3.2",
    "ddgs>=9.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "respx>=0.21",
    "ruff>=0.7",
    "mypy>=1.13",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short --strict-markers"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "ASYNC"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.uv]
package = false
